@@ -18,15 +18,15 @@
 
 <addon id="metadata.imdbrt.com"
        name="IMDb + RT"
-       version="1.3.6"
+       version="1.3.7"
        provider-name="mortstar (IMDb by Team XBMC)">
   <requires>
-    <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="1.0.7"/>
-    <import addon="metadata.common.movieposterdb.com" version="1.0.4"/>
-    <import addon="metadata.common.imdb.com" version="2.1.1"/>
-    <import addon="metadata.common.impa.com" version="1.0.3"/>
-    <import addon="metadata.common.hdtrailers.net" version="1.0.6"/>
+	<import addon="xbmc.metadata" version="1.0"/>
+	<import addon="metadata.common.themoviedb.org" version="1.0.7"/>
+	<import addon="metadata.common.movieposterdb.com" version="1.0.4"/>
+	<import addon="metadata.common.imdb.com" version="2.1.1"/>
+	<import addon="metadata.common.impa.com" version="1.0.3"/>
+	<import addon="metadata.common.hdtrailers.net" version="1.0.6"/>
 	<import addon="metadata.common.rt.com" version="1.1.1"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
