@@ -1,3 +1,6 @@
+[B]1.3.7[/B]
+- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.4) i.e. "fixed: missing imdb ID in search results due to site changes"
+
 [B]1.3.6[/B]
 - Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.3) i.e. "fixed: IMDb rating" (Probably unnecessary for this scraper but the option is there if needed) 
 
